2010-02-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5553]
	* malloc/malloc.c (public_vALLOc): Set ar_ptr when trying main_arena.
	(public_pVALLOc): Likewise.

2010-02-22  Jim Meyering  <meyering@redhat.com>

	* manual/math.texi (BSD Random): Fix a typo: s/are/is/

	* manual/charset.texi: Adjust grammar.

	* manual/errno.texi (Error Messages): Fix doubled-words and typos.
	* manual/charset.texi (Selecting the Conversion): Likewise.
	* manual/getopt.texi (Getopt Long Options): Likewise.
	* manual/memory.texi (Resizing the Data Segment): Likewise.
	* manual/message.texi (GUI program problems): Likewise.
	* manual/resource.texi (CPU Affinity): Likewise.
	* manual/stdio.texi (Streams and Threads): Likewise.
	* manual/time.texi (High Accuracy Clock): Likewise.

2009-02-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/dl-machine.h (elf_machine_runtime_setup):
	Adjust rela->r_offset by l->l_addr when rewriting PLT.

	* sysdeps/sparc/sparc64/memchr.S: Use unsigned branch on greater to
	test end of buffer.

	* sysdeps/unix/sysv/linux/sparc/sparc32/makecontext.c
	(__makecontext): Adjust arg counter properly when copying arg
	stack slots.

2009-02-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_runtime_setup):
	Adjust rela->r_offset by l->l_addr when rewriting PLT.

2010-02-19  Carl Fredrik Hammar  <hammy.lite@gmail.com>

	* hurd/hurdioctl.c (tiocsctty): Call `do_tiocsctty' instead of
	non-existent `tiocsctty_port'.

2010-02-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/memcmp.S (memcmp): Use CPUID_OFFSET
	instead of FEATURE_OFFSET.
	* sysdeps/i386/i686/multiarch/strcmp.S (strcmp): Likewise.

	* sysdeps/i386/i686/multiarch/memcmp-sse4.S: Add alignnments.
	Fix one unwind info problem.

	* sysdeps/i386/i686/multiarch/memcmp-ssse3.S (less1bytes): Add CFI_POP.

	* sysdeps/i386/i686/multiarch/strcmp-sse4.S: Simplify unwind info.

2010-02-17  H.J. Lu  <hongjiu.lu@intel.com>